--- a/src/components/ui/Dialog/Dialog.module.css
+++ b/src/components/ui/Dialog/Dialog.module.css
@@ -7,6 +7,8 @@
 
 .root::backdrop {
 	background-color: rgba(0, 0, 0, 0.5);
+	opacity: 0;
+	transition: opacity 300ms ease-in-out;
 }
 
 .content {
@@ -39,4 +41,35 @@
 
 .body {
 	margin: 0;
+}
+
+/* アニメーション */
+.enter .content {
+	opacity: 0;
+	transform: scale(0.95);
+}
+
+.enterActive .content {
+	opacity: 1;
+	transform: scale(1);
+	transition: opacity 300ms ease-out, transform 300ms ease-out;
+}
+
+.enterActive::backdrop {
+	opacity: 1;
+}
+
+.exit .content {
+	opacity: 1;
+	transform: scale(1);
+}
+
+.exitActive .content {
+	opacity: 0;
+	transform: scale(0.95);
+	transition: opacity 300ms ease-in, transform 300ms ease-in;
+}
+
+.exitActive::backdrop {
+	opacity: 0;
 }
