--- a/src/components/ui/Dialog/Dialog.module.css
+++ b/src/components/ui/Dialog/Dialog.module.css
@@ -1,25 +1,25 @@
-.root {
-	border-radius: 8px;
-	border: 1px solid var(--gray);
-}
-
-.root::backdrop {
-	background-color: rgba(0, 0, 0, 0.5);
-	opacity: 0;
-	transition: opacity 300ms ease-in-out;
+.overlay {
+	background-color: rgba(0, 0, 0, 50%);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 99;
 }
 
 .content {
+	max-width: 640px;
+	width: 100%;
+	background-color: var(--white);
+	padding: 24px;
+	border-radius: 8px;
 	display: flex;
 	flex-direction: column;
 	row-gap: 16px;
-	padding: 16px;
 }
 
 .header {
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
 }
 
 .title {
@@ -29,11 +29,6 @@
 .closeButton {
 	background: none;
 	border: none;
-	font-size: 24px;
 	cursor: pointer;
-	padding: 0 8px;
-}
-
-.closeButton:hover {
-	opacity: 0.5;
+	font-size: 24px;
 }
